tests/expectations/compiler/function/9_inputs_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected ; -- found '}'
    --> compiler-test:17:5
     |
  17 |     }}
     |     ^"""]
